# docs/swagger.yaml
@@ -27,6 +27,7 @@ definitions:
     required:
     - email
     - name
+    - phone
     type: object
   register.RegisterTenantRequest:
     description: Tenant registration request body
@@ -66,30 +67,19 @@ definitions:
         type: string
     required:
     - account
+    - closing_hours
     - email
     - name
+    - opening_hours
+    - phone
     - timezone
     type: object
   register.RegisterTenantResponse:
     properties:
-      address:
-        type: string
-      closing_hours:
-        type: string
       created_at:
-        type: string
-      email:
         type: string
       id:
         type: integer
-      name:
-        type: string
-      opening_hours:
-        type: string
-      phone:
-        type: string
-      timezone:
-        type: string
       updated_at:
         type: string
     type: object
@@ -98,7 +88,7 @@ info:
   title: Appointment Management System API
   version: "1.0"
 paths:
-  /api/v1/tenants/register:
+  /api/v1/tenants/:
     post:
       consumes:
       - application/json
