# internal/delivery/rest/v1/tenant/register/tenant_register_route.go
@@ -1,0 +1,16 @@
+package register
+
+import (
+	"appointment_management_system/internal/services/tenant"
+
+	"github.com/gin-gonic/gin"
+)
+
+func RegisterRoutes(
+	tenantV1RouterGroup *gin.RouterGroup,
+) {
+	tenantCreateService := tenant.NewTenantCreateService()
+	uc := newTenantRegisterUsecase(tenantCreateService)
+	h := newTenantRegisterHandler(uc)
+	tenantV1RouterGroup.POST("/", h.Register)
+}
