# internal/delivery/rest/v1/tenant/register/tenant_register_usecase.go
@@ -2,8 +2,8 @@ package register
 
 import (
 	"appointment_management_system/internal/data/entity"
-	"appointment_management_system/internal/domain/tenants/service/create"
 	"appointment_management_system/internal/pkg/custom_errors"
+	"appointment_management_system/internal/services/tenant"
 
 	"github.com/gin-gonic/gin"
 )
@@ -14,18 +14,15 @@ type TenantRegisterUsecase interface {
 }
 
 type tenantRegisterUsecase struct {
-	createTenantService create.TenantCreateService
+	createTenantService tenant.Service
 }
 
 // Execute implements TenantRegisterUsecase.
 func (t *tenantRegisterUsecase) Execute(ctx *gin.Context, request RegisterTenantRequest) (*entity.Tenant, error) {
-	account, err := entity.NewAccount(
-		entity.NewAccountParams{
-			Name:  request.Account.Name,
-			Email: request.Account.Email,
-			Phone: request.Account.Phone,
-		},
-	)
+
+	account, _, err := entity.NewAccount(
+		entity.NewAccountIdentity(request.Name, request.Email, request.Phone),
+		nil)
 	if err != nil {
 		return nil, custom_errors.New(
 			err,
@@ -33,18 +30,10 @@ func (t *tenantRegisterUsecase) Execute(ctx *gin.Context, request RegisterTenant
 			"failed to validate new account entity")
 	}
 
-	tenant, err := entity.NewTenant(entity.NewTenantParams{
-		Name:         request.Name,
-		Address:      request.Address,
-		Email:        request.Email,
-		Phone:        request.Phone,
-		Timezone:     request.Timezone,
-		OpeningHours: request.OpeningHours,
-		ClosingHours: request.ClosingHours,
-		Account: &[]entity.Account{
-			*account,
-		},
-	})
+	tenant, err := entity.NewTenant(
+		entity.NewTenantIdentity(request.Name, request.Email, request.Phone),
+		entity.NewTenantStoreInfo(request.Address, request.Timezone, request.OpeningHours, request.ClosingHours),
+		&[]entity.Account{*account})
 
 	if err != nil {
 		return nil, custom_errors.New(
@@ -53,7 +42,7 @@ func (t *tenantRegisterUsecase) Execute(ctx *gin.Context, request RegisterTenant
 			"failed to validate new tenant entity")
 	}
 
-	if err := t.createTenantService.Execute(ctx, tenant); err != nil {
+	if err := t.createTenantService.Create(ctx, tenant); err != nil {
 		return nil, custom_errors.New(
 			err,
 			custom_errors.InternalServerError,
@@ -63,7 +52,7 @@ func (t *tenantRegisterUsecase) Execute(ctx *gin.Context, request RegisterTenant
 	return tenant, nil
 }
 
-func newTenantRegisterUsecase(createTenantService create.TenantCreateService) TenantRegisterUsecase {
+func newTenantRegisterUsecase(createTenantService tenant.Service) TenantRegisterUsecase {
 	return &tenantRegisterUsecase{
 		createTenantService: createTenantService,
 	}
